It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Mon, Nov 16, 2009
---------------------------------------------------------------------
- Streamlined CSS styles to fix text wrapping.
- Added explicit CSS value to fix tabs height (thanks, Apirak!)
- Fixed time calculations for dashboard activities.

Thu, Nov 12, 2009
---------------------------------------------------------------------
- Restructured settings to take advantage of locale.
- NOTE: re-run crm:settings:load

Wed, Nov 11, 2009
---------------------------------------------------------------------
- Moved hardcoded setting values from config/settings.yml to locale.

Mon, Nov 9, 2009
---------------------------------------------------------------------
- Merged with lanadv/i18n branch (thanks, Lana!)

Fri, Nov 6, 2009
---------------------------------------------------------------------
- Adjust total campaign revenue when related opportunity is won (LH #121).
- Refresh campaign sidebar when updating related opportunity (LH #121).
- Refresh campaign sidebar when rejecting or converting related lead (LH #121).
- Display newly created opportunity when converting lead from campaign page (LH #121).

Thu, Nov 5, 2009
---------------------------------------------------------------------
- Writing specs for LH #121.

Wed, Nov 4, 2009
---------------------------------------------------------------------
- Correctly set opportunity campaign and source when converting a lead (LH #119).
- Show correct campaign name and source when adding a lead from campaign landing page.
- Update lead counters when reassigning leads between campaigns (LH #117).

Sun, Nov 1, 2009
---------------------------------------------------------------------
- Implemented I18n for options across all models.

Sat, Oct 31, 2009
---------------------------------------------------------------------