@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Wed, Nov 18, 2009
+---------------------------------------------------------------------
+- Added Thai language translation (thanks, Apirak!)
+
 Mon, Nov 16, 2009
 ---------------------------------------------------------------------
 - Streamlined CSS styles to fix text wrapping.
